read data from body
